--- a/atendimento/pom.xml
+++ b/atendimento/pom.xml
@@ -4,11 +4,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>jamile.eteczl</groupId>
-  <artifactId>aula_print</artifactId>
+  <groupId>br.edu.eteczl</groupId>
+  <artifactId>atendimento</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>aula_print</name>
+  <name>atendimento</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -25,14 +25,6 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-	
-	
-	<dependency>
-	<groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.6</version>
-	</dependency>
-	
   </dependencies>
 
   <build>
@@ -78,27 +70,6 @@
           <version>3.0.0</version>
         </plugin>
       </plugins>
-	  
-	  <plugins>
-  <plugin>
-   <groupId>org.codehaus.mojo</groupId>
-   <artifactId>exec-maven-plugin</artifactId>
-   <version>1.2.1</version>
-   <executions>
-     <execution>
-        <goals>
-           <goal>java</goal>
-        </goals>
-    </execution>
-   </executions>
-   <configuration>
-       <mainClass>jamile.eteczl.App</mainClass>
-   </configuration>
-</plugin>
-</plugins>
-	  
     </pluginManagement>
-	
-	
   </build>
 </project>
